# cfn-lsp-extra

./: .gitignore  CHANGELOG.md  LICENSE  README.md  noxfile.py  pyproject.toml  todo.org
.github/: dependabot.yml
.github/workflows/: labeler.yml  release.yml  tests.yml
cfn_lsp_extra/: __init__.py  __main__.py  aws_data.py  cfnlint_integration.py  completions.py  context.py  cursor.py  intrinsic_functions.py  parsing.py  properties.py  ref.py  server.py
cfn_lsp_extra/completions/: __init__.py  __init__.py~  allowed_values.py  attributes.py  cursor.py  functions.py  functions.py~  ref.py  resource_keys.py  resources.py  static.py
cfn_lsp_extra/config/: user_configuration.py
cfn_lsp_extra/decode/: __init__.py  extractors.py  json_decoding.py  position.py  yaml_decoding.py
cfn_lsp_extra/definitions/: __init__.py  attributes.py  ref.py
cfn_lsp_extra/hover/: __init__.py
cfn_lsp_extra/hovers/: __init__.py  attributes.py  functions.py  refs.py
cfn_lsp_extra/parsing/: extractors.py  json_parsing.py  position.py  yaml_parsing.py
cfn_lsp_extra/resources/: custom.json  doc_urls  sam_context.json  sam_doc_urls
cfn_lsp_extra/scrape/: markdown.py  markdown_textwrapper.py  sam_specification.py  specification.py  with_success_failure_count.py
src/cfn_lsp_extra/: server.py
src/cnf_lsp_extra/: __init__.py  __main__.py
tests/: __init__.py  conftest.py  test_aws_data.py  test_completions.py  test_context.py  test_main.py  test_parsing.py  test_ref.py  test_server.py
tests/completions/: test_allowed_values.py  test_attributes.py  test_completions.py  test_completions.py~  test_functions.py  test_resources.py  test_static.py
tests/config/: test_user_configuration.py
tests/decode/: test_decode.py  test_extractors.py  test_json_decoding.py  test_position.py  test_yaml_decoding.py
tests/definitions/: test_attributes.py  test_ref.py
tests/hover/: test_attributes.py
tests/hovers/: test_attributes.py  test_functions.py  test_refs.py
tests/integration/: conftest.py  test_completions_integration.py  test_definition_integration.py  test_diagnostics_integration.py  test_hovers_integration.py
tests/integration/workspace/: template.json  template.yaml
tests/parsing/: test_extractors.py  test_json_parsing.py  test_yaml_parsing.py
tests/scrape/: test_markdown.py  test_markdown_textwrapper.py  test_sam_specification.py
