[project]
name = "cfn-lsp-extra"
description = "Cfn Lsp Extra"
authors = [{name = "Laurence Warne", email = "laurencewarne@gmail.com"}]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/laurencewarne/cfn-lsp-extra"
repository = "https://github.com/laurencewarne/cfn-lsp-extra"
classifiers = ["Topic :: Software Development"]
requires-python = ">=3.9,<4"
dependencies = [
    "click (>=8.1.7,<9.0.0)",
    "cfn-lint (>=1.32.4,<2.0.0)",
    "pygls (>=1.3.1,<2.0.0)",  # pygls = { path = "../pygls/", develop = false },
    "PyYAML (>=6.0.2,<7.0.0)",
    "types-PyYAML (>=6.0.2,<7.0.0)",
    "platformdirs (>=4.3.6)",
    "attrs (>=24.2,<26.0)",
    "importlib_resources (>=6.4.0)",
    # Need to pin a version otherwise 'poetry update' goes crazy
    "aws-sam-translator (>=1.96.0)",
    "botocore (>=1.35.81)",
]
dynamic = ["version"]

[tool.poetry]
version = "0.0.0"

[tool.poetry.requires-plugins]
poetry-dynamic-versioning = { version = ">=1.0.0,<2.0.0", extras = ["plugin"] }

[tool.poetry-dynamic-versioning]
enable = true

[project.urls]
Homepage = "https://github.com/laurencewarne/cfn-lsp-extra"
Documentation = "https://github.com/laurencewarne/cfn-lsp-extra/blob/master/README.md"
Repository = "https://github.com/laurencewarne/cfn-lsp-extra"
Issues = "https://github.com/laurencewarne/cfn-lsp-extra/issues"
Changelog = "https://github.com/laurencewarne/cfn-lsp-extra/blob/master/CHANGELOG.md"

[tool.poetry.group.dev.dependencies]
coverage = {extras = ["toml"], version = ">=6.2"}
ruff = "^0.12.0"
mypy = "^1.16.1"
pytest = "^8.4.1"
pytest-asyncio = "^1.0.0"
pytest-mock = "^3.14"
# https://github.com/swyddfa/lsp-devtools
pytest-lsp = "^0.4.3" #pytest-lsp = { path = "../lsp-devtools/lib/pytest-lsp/"}
python-lsp-server = "^1.12.2"
pylsp-mypy = "^0.7.0"
python-lsp-ruff = "^2.2.1"
nox = "^2025.5.1"

# Optional: https://python-poetry.org/docs/pyproject/#optional-dependencies
[project.optional-dependencies]
parse = [
  "lxml (>=5.2.1,<6.0.0)",
  "markdownify (>=0.12.1,<0.15.0)",
  "beautifulsoup4 (>=4.12.3,<5.0.0)",
  "types-beautifulsoup4 (>=4.12.0,<5.0.0)",
  "requests (>=2.32.3,<3.0.0)",
  "types-requests (>2,<3.0.0)"
]

[project.scripts]
cfn-lsp-extra = "cfn_lsp_extra.__main__:main"

[tool.coverage.paths]
source = ["cfn_lsp_extra", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["cfn_lsp_extra"]
omit = ["cfn_lsp_extra/scrape/*", "cfn_lsp_extra/server.py", "cfn_lsp_extra/__main__.py"]

[tool.coverage.report]
show_missing = true
fail_under = 80

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true

[[tool.mypy.overrides]]
module = "cfnlint.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = ["integration: mark the test as an integration test"]
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
exclude = [
    "tests",  # MAYBE shouldn't be excluding this
    "bin"
]

[tool.ruff.lint]
select = [
    "F",    # Pyflakes
    "E",    # Pycodestyle
    "W",    # Pycodestyle
    "I",    # isort
    "N",    # PEP8 naming
    "B",    # flake8-bugbear
    "PIE",  # flake8-pie
    "SIM",  # flake8-simplify
    "Q",    # flake8-quotes
    "RET",  # flake8-return
    "A",    # flake8-builtins
]

ignore = [
    # "W503",  # line break before binary operator
    "E203",  # whitespace before ':'
    "E501",  # line too long
    "E731",  # do not assign a lambda expression, use a def
    # "E704"   # multiple statements on one line (def)
]

exclude = [
    "tests"
]

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"
